--- a/css/style.css
+++ b/css/style.css
@@ -1,411 +1,18 @@
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+/* Error: Undefined variable.
+ *    ,
+ * 11 |   border: 3px solid $color-gris;
+ *    |                     ^^^^^^^^^^^
+ *    '
+ *   scss/_sabores.scss 11:21  @import
+ *   scss/style.scss 8:9       root stylesheet */
 
-h1 {
-  font-size: 3.5rem;
-  font-family: "Rubik Dirt", cursive;
-}
-
-h2 {
-  font-size: 2rem;
-  font-family: "PT Sans", sans-serif;
-}
-
-p {
-  font-size: 1.2rem;
-  font-family: "Quicksand", sans-serif;
-}
-
-.seccion-clara {
-  color: black;
-  background-color: #f6edd9;
-}
-
-.seccion-oscura {
-  color: white;
-  background-color: #4e5351;
-}
-
-.seccion-verde {
-  color: black;
-  background-color: #5a8c66;
-}
-
-.navbar {
-  padding: 2rem;
-  font-size: 1.2rem;
-}
-
-.navbar-brand {
-  font-size: 1.7rem;
-  font-family: "Phudu", cursive;
-  color: white;
-}
-
-.nav-link {
-  color: white;
-  font-family: "Phudu", cursive;
-}
-
-footer {
-  min-height: 500px;
-}
-
-.footer-texto {
-  font-size: 1.5rem;
-  padding: 20px;
-  margin-bottom: 30px;
-}
-
-.iconos-redes-sociales i {
-  color: white;
-  font-size: 1.5rem;
-  transition: all 0.2s ease-in;
-}
-
-.iconos-redes-sociales a {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2px;
-  margin: 10px;
-  border: 2px solid white;
-  border-radius: 50%;
-  transition: all 0.2s ease-in;
-}
-
-.iconos-redes-sociales a:hover {
-  background-color: white;
-  border: 2px solid black;
-}
-.iconos-redes-sociales a:hover i {
-  color: black;
-}
-
-.derechos-de-autor {
-  font-size: 15px;
-  color: #aeaeae;
-  padding: 20px;
-  text-align: center;
-}
-
-/* Index */
-@media (max-width: 1200px) {
-  .contenedor-intro {
-    display: flex;
-    flex-direction: column;
-    padding: 1.5rem;
-    align-items: center;
-    justify-content: center;
-  }
-}
-@media (max-width: 1200px) {
-  .flecha {
-    display: none;
-  }
-  .flecha .img-flecha {
-    display: none;
-  }
-}
-@media (max-width: 1200px) {
-  .descripcion {
-    padding-bottom: 2rem;
-  }
-}
-@media (max-width: 1200px) {
-  .descripcion-lista {
-    padding-top: 2rem;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-  }
-}
-@media (max-width: 400px) {
-  .empresa {
-    max-height: 800px;
-  }
-}
-@media (max-width: 400px) {
-  .img-intro {
-    height: 100%;
-    width: 100%;
-  }
-}
-/* Nosotros */
-@media (max-width: 668px) {
-  .video {
-    height: 70%;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-  }
-}
-/* Ubicacion */
-@media (max-width: 556px) {
-  .imagen-ubicacion {
-    height: 350px;
-    width: 300px;
-  }
-  .imagen-ubicacion .mapa-ubicacion {
-    height: 350px;
-    width: 300px;
-  }
-}
-/* Seccion Introduccion */
-.introduccion {
-  padding: 4rem;
-}
-
-.seccion-presentacion {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.flecha {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: end;
-}
-.flecha .img-flecha {
-  max-width: 300px;
-  padding: 10px;
-  height: 60%;
-}
-
-/* Sobre la Empresa */
-.empresa {
-  min-height: 500px;
-  padding: 10px;
-}
-.empresa .contenedor {
-  text-align: center;
-  max-width: 600px;
-}
-.empresa .contenedor .seccion-titulo {
-  font-size: 3rem;
-}
-
-/* Seccion Explicacion */
-.explicacion {
-  padding: 4rem;
-}
-.explicacion .descripcion-lista {
-  text-align: left;
-}
-.explicacion .descripcion-lista .iconos-texto {
-  display: flex;
-}
-
-.iconos-texto p {
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-}
-
-.iconos-texto i {
-  font-size: 25px;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: black;
-}
-
-/* Carrusel | Imagenes */
-.helados {
-  padding: 40px 40px 80px 40px;
-}
-.helados .carousel {
-  min-width: 800px;
-}
-.helados .carousel .carousel-item {
-  height: 800px;
-}
-.helados .carousel .carousel-item .container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.helados .carousel .carousel-item .container .helado-imagen {
-  height: 800px;
-  width: 600px;
-  margin: 20px 20px 20px 20px;
-  border-radius: 50px;
-}
-
-.seccion-descripcion {
-  padding-bottom: 3rem;
-}
-
-/* Seccion Hero */
-.seccion-historia {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-.seccion-historia h1 {
-  padding-bottom: 3rem;
-}
-
-/* Seccion Videos */
-.seccion-videos {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-.seccion-videos .titulo-videos {
-  padding-bottom: 3rem;
-}
-.seccion-videos .titulo-videos .video {
-  padding: 0rem;
-}
-
-/* Caja Informativa */
-.cta-info {
-  width: 100%;
-  padding: 3rem;
-}
-
-/* Sabores de los Helados */
-.seccion-1-helados {
-  padding: 3rem;
-}
-
-/* Seccion de los Helados */
-.seccion-helados .columna {
-  padding: 20px;
-  border: 3px solid #4e5351;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  transition: all 0.2s ease-in;
-}
-
-.columna:hover {
-  color: white;
-  background-color: #4e5351;
-}
-
-.contenedor-descripcion {
-  height: 600px;
-  max-height: 100%;
-  width: 608px;
-  max-width: 100%;
-  transition: all 0.2s ease-in;
-}
-
-.contenedor-descripcion:hover {
-  color: black;
-  background-color: #f6edd9;
-}
-
-.sabores-titulo {
-  padding: 15px 0px 15px 0px;
-  font-size: 2.8rem;
-}
-
-.items-sabores {
-  font-size: 1.1rem;
-}
-
-/* Galeria de Helados */
-.helados-recientes {
-  padding: 40px;
-}
-.helados-recientes img {
-  height: 100%;
-  width: 100%;
-  padding: 10px;
-  border-radius: 50px;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  transition: all 0.5s ease;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 11 \2502    border: 3px solid $color-gris;\a    \2502                      ^^^^^^^^^^^\a    \2575 \a   scss/_sabores.scss 11:21  @import\a   scss/style.scss 8:9       root stylesheet";
 }
-
-.helado-contenedor {
-  padding-top: 60px;
-  margin-bottom: 40px;
-}
-
-.overlay {
-  transition: all 0.2s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-.overlay p {
-  font-size: 25px;
-  font-weight: bold;
-  margin-bottom: 0;
-}
-
-.ice-cream {
-  position: relative;
-}
-
-.ice-cream:hover img {
-  opacity: 0.6;
-}
-
-.ice-cream:hover .overlay {
-  opacity: 1;
-}
-
-.overlay .iconos-contenedor {
-  display: flex;
-}
-
-.overlay i {
-  color: black;
-  font-size: 60px;
-  margin: 10px;
-}
-
-/* Local */
-.imagen-mapa {
-  padding: 40px;
-}
-
-.descripcion-mapa {
-  padding: 2rem;
-}
-
-.imagen-mapa img {
-  height: relative;
-  width: relative;
-  max-height: 500px;
-  max-width: 450px;
-  border-radius: 50px;
-  padding: 10px;
-}
-
-.imagen-mapa iframe {
-  height: relative;
-  width: relative;
-  max-height: 500px;
-  max-width: 450px;
-  border-radius: 50px;
-  padding: 10px;
-}
-
-.img-ubicacion {
-  padding: 1.5rem;
-}
-
-.mapa-ubicacion {
-  padding: 1.5rem;
-}
-
-/*# sourceMappingURL=style.css.map */
