--- a/scss/_sabores.scss
+++ b/scss/_sabores.scss
@@ -8,7 +8,7 @@
 
 .seccion-helados .columna {
   padding: 20px;
-  border: 3px solid #4e5351;
+  border: 3px solid $color-gris;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,7 +31,7 @@
 
 .contenedor-descripcion:hover {
   color: black;
-  background-color: #f6edd9;
+  background-color: $color-blanco;
 }
 
 .sabores-titulo {
