--- a/scss/_sabores.scss
+++ b/scss/_sabores.scss
@@ -8,7 +8,7 @@
 
 .seccion-helados .columna {
   padding: 20px;
-  border: 3px solid $color-gris;
+  border: #4e5351 3px solid;
   display: flex;
   flex-direction: column;
   align-items: center;
