--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -22,15 +22,15 @@ p {
 
 .seccion-clara {
   color: black;
-  background-color: $color-blanco;
+  background-color: #f6edd9;
 }
 
 .seccion-oscura {
   color: white;
-  background-color: $color-gris;
+  background-color: #4e5351;
 }
 
 .seccion-verde {
   color: black;
-  background-color: $color-verde;
+  background-color: #5a8c66;
 }
