--- a/scss/_sabores.scss
+++ b/scss/_sabores.scss
@@ -18,7 +18,7 @@
 
 .columna:hover {
   color: white;
-  background-color: $color-gris;
+  background-color: #4e5351;
 }
 
 .contenedor-descripcion {
