--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ footer {
 /* Seccion de los Helados */
 .seccion-helados .columna {
   padding: 20px;
-  border: #4e5351 3px solid;
+  border: 3px solid #4e5351;
   display: flex;
   flex-direction: column;
   align-items: center;
